--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -131,94 +131,94 @@
     </div>
 
     <!--mobile header start-->
-    <div class="m-header">
-        <div class="am-g am-show-sm-only">
-            <div class="am-u-sm-2">
-                <div class="menu-bars">
-                    <a href="#doc-oc-demo1" data-am-offcanvas="{effect: 'push'}"><i
-                            class="am-menu-toggle-icon am-icon-bars"></i></a>
-                    <!-- 侧边栏内容 -->
-                    <nav data-am-widget="menu" class="am-menu  am-menu-offcanvas1" data-am-menu-offcanvas>
-                        <a href="javascript: void(0)" class="am-menu-toggle"></a>
+    <!--<div class="m-header">-->
+    <!--<div class="am-g am-show-sm-only">-->
+    <!--<div class="am-u-sm-2">-->
+    <!--<div class="menu-bars">-->
+    <!--<a href="#doc-oc-demo1" data-am-offcanvas="{effect: 'push'}"><i-->
+    <!--class="am-menu-toggle-icon am-icon-bars"></i></a>-->
+    <!--&lt;!&ndash; 侧边栏内容 &ndash;&gt;-->
+    <!--<nav data-am-widget="menu" class="am-menu  am-menu-offcanvas1" data-am-menu-offcanvas>-->
+    <!--<a href="javascript: void(0)" class="am-menu-toggle"></a>-->
 
-                        <div class="am-offcanvas">
-                            <div class="am-offcanvas-bar">
-                                <ul class="am-menu-nav am-avg-sm-1">
-                                    <li><a href="./index.html" class="">首页</a></li>
-                                    <li class="am-parent">
-                                        <a href="#" class="">产品中心</a>
-                                        <ul class="am-menu-sub am-collapse ">
-                                            <li class="">
-                                                <a href="html/product1.html" class="">产品展示1</a>
-                                            </li>
-                                            <li class="">
-                                                <a href="html/product2.html" class="">产品展示2</a>
-                                            </li>
-                                            <li class="">
-                                                <a href="html/product3.html" class="">产品展示3</a>
-                                            </li>
-                                        </ul>
-                                    </li>
-                                    <li class=""><a href="html/example.html" class="">客户案例</a></li>
-                                    <li class=""><a href="html/solution.html" class="">解决方案</a></li>
-                                    <li class="am-parent">
-                                        <a href="html/news.html" class="">新闻中心</a>
-                                        <ul class="am-menu-sub am-collapse  ">
-                                            <li class="">
-                                                <a href="html/news-content.html" class="">公司动态</a>
-                                            </li>
-                                            <li class="">
-                                                <a href="html/404-dark.html" class="">行业动态</a>
-                                            </li>
-                                            <li class="">
-                                                <a href="html/404-light.html" class="">精彩专题</a>
-                                            </li>
-                                        </ul>
-                                    </li>
-                                    <li class=""><a href="html/about.html" class="">关于我们</a></li>
-                                    <li class=""><a href="html/join.html" class="">加入我们</a></li>
-                                    <li class=""><a href="html/contact.html" class="">联系我们</a></li>
-                                    <li class="am-parent">
-                                        <a href="" class="nav-icon nav-icon-globe">Language</a>
-                                        <ul class="am-menu-sub am-collapse  ">
-                                            <li>
-                                                <a href="#">English</a>
-                                            </li>
-                                            <li class="">
-                                                <a href="#">Chinese</a>
-                                            </li>
-                                        </ul>
-                                    </li>
-                                    <li class="nav-share-contain">
-                                        <div class="nav-share-links">
-                                            <i class="am-icon-facebook"></i>
-                                            <i class="am-icon-twitter"></i>
-                                            <i class="am-icon-google-plus"></i>
-                                            <i class="am-icon-pinterest"></i>
-                                            <i class="am-icon-instagram"></i>
-                                            <i class="am-icon-linkedin"></i>
-                                            <i class="am-icon-youtube-play"></i>
-                                            <i class="am-icon-rss"></i>
-                                        </div>
-                                    </li>
-                                    <li class=""><a href="html/login.html" class="">登录</a></li>
-                                    <li class=""><a href="html/register.html" class="">注册</a></li>
-                                </ul>
+    <!--<div class="am-offcanvas">-->
+    <!--<div class="am-offcanvas-bar">-->
+    <!--<ul class="am-menu-nav am-avg-sm-1">-->
+    <!--<li><a href="./index.html" class="">首页</a></li>-->
+    <!--<li class="am-parent">-->
+    <!--<a href="#" class="">产品中心</a>-->
+    <!--<ul class="am-menu-sub am-collapse ">-->
+    <!--<li class="">-->
+    <!--<a href="html/product1.html" class="">产品展示1</a>-->
+    <!--</li>-->
+    <!--<li class="">-->
+    <!--<a href="html/product2.html" class="">产品展示2</a>-->
+    <!--</li>-->
+    <!--<li class="">-->
+    <!--<a href="html/product3.html" class="">产品展示3</a>-->
+    <!--</li>-->
+    <!--</ul>-->
+    <!--</li>-->
+    <!--<li class=""><a href="html/example.html" class="">客户案例</a></li>-->
+    <!--<li class=""><a href="html/solution.html" class="">解决方案</a></li>-->
+    <!--<li class="am-parent">-->
+    <!--<a href="html/news.html" class="">新闻中心</a>-->
+    <!--<ul class="am-menu-sub am-collapse  ">-->
+    <!--<li class="">-->
+    <!--<a href="html/news-content.html" class="">公司动态</a>-->
+    <!--</li>-->
+    <!--<li class="">-->
+    <!--<a href="html/404-dark.html" class="">行业动态</a>-->
+    <!--</li>-->
+    <!--<li class="">-->
+    <!--<a href="html/404-light.html" class="">精彩专题</a>-->
+    <!--</li>-->
+    <!--</ul>-->
+    <!--</li>-->
+    <!--<li class=""><a href="html/about.html" class="">关于我们</a></li>-->
+    <!--<li class=""><a href="html/join.html" class="">加入我们</a></li>-->
+    <!--<li class=""><a href="html/contact.html" class="">联系我们</a></li>-->
+    <!--<li class="am-parent">-->
+    <!--<a href="" class="nav-icon nav-icon-globe">Language</a>-->
+    <!--<ul class="am-menu-sub am-collapse  ">-->
+    <!--<li>-->
+    <!--<a href="#">English</a>-->
+    <!--</li>-->
+    <!--<li class="">-->
+    <!--<a href="#">Chinese</a>-->
+    <!--</li>-->
+    <!--</ul>-->
+    <!--</li>-->
+    <!--<li class="nav-share-contain">-->
+    <!--<div class="nav-share-links">-->
+    <!--<i class="am-icon-facebook"></i>-->
+    <!--<i class="am-icon-twitter"></i>-->
+    <!--<i class="am-icon-google-plus"></i>-->
+    <!--<i class="am-icon-pinterest"></i>-->
+    <!--<i class="am-icon-instagram"></i>-->
+    <!--<i class="am-icon-linkedin"></i>-->
+    <!--<i class="am-icon-youtube-play"></i>-->
+    <!--<i class="am-icon-rss"></i>-->
+    <!--</div>-->
+    <!--</li>-->
+    <!--<li class=""><a href="html/login.html" class="">登录</a></li>-->
+    <!--<li class=""><a href="html/register.html" class="">注册</a></li>-->
+    <!--</ul>-->
 
-                            </div>
-                        </div>
-                    </nav>
+    <!--</div>-->
+    <!--</div>-->
+    <!--</nav>-->
 
-                </div>
-            </div>
-            <div class="am-u-sm-5 am-u-end">
-                <div class="m-logo">
-                    <a href=""><img src="images/index1.png" alt=""></a>
-                </div>
-            </div>
-        </div>
-        <!--mobile header end-->
-    </div>
+    <!--</div>-->
+    <!--</div>-->
+    <!--<div class="am-u-sm-5 am-u-end">-->
+    <!--<div class="m-logo">-->
+    <!--<a href=""><img src="images/index1.png" alt=""></a>-->
+    <!--</div>-->
+    <!--</div>-->
+    <!--</div>-->
+    <!--&lt;!&ndash;mobile header end&ndash;&gt;-->
+    <!--</div>-->
 
 
     <!--===========layout-container================-->
@@ -695,7 +695,7 @@
             <div class="am-g">
                 <div class="am-u-md-4">
                     <div class="contact_card">
-                        <i style="color:#59bcdb" class="contact_card--icon am-icon-phone"></i>
+                        <i style="color:#0066FF" class="contact_card--icon am-primary am-icon-qq"></i>
                         <strong class="contact_card--title">QQ联系</strong>
                         <p class="contact_card--text"><br> <strong>318074670</strong> <br></p>
                         <!--<button type="button" class="am-btn am-btn-secondary">Order a Call Back</button>-->
@@ -703,7 +703,7 @@
                 </div>
                 <div class="am-u-md-4">
                     <div class="contact_card">
-                        <i style="color:#59bcdb" class="contact_card--icon am-icon-envelope-o"></i>
+                        <i style="color:#339933" class="contact_card--icon am-success am-icon-weixin"></i>
                         <strong class="contact_card--title">微信联系</strong>
                         <p class="contact_card--text"><br> <strong>ds318074670</strong> <br></p>
                         <!--<button type="button" class="am-btn am-btn-secondary">Start Writing</button>-->
@@ -734,70 +734,72 @@
                     <div class="am-g">
                         <div class="am-u-md-3 ">
                             <div class="footer_main--column">
-                                <strong class="footer_main--column_title">关于我们</strong>
+                                <strong class="footer_main--column_title"></strong>
                                 <div class="footer_about">
                                     <p class="footer_about--text">
-                                        云适配(AllMobilize Inc.)
-                                        是全球领先的HTML5企业移动化解决方案供应商，由前微软美国总部IE浏览器核心研发团队成员及移动互联网行业专家在美国西雅图创立.
+
+                                        <br>
+                                        <br>
+                                        <br>
                                     </p>
                                     <p class="footer_about--text">
-                                        云适配跨屏云也成功应用于超过30万家企业网站，包括微软、联想等世界500强企业
+                                        <br>
                                     </p>
                                 </div>
                             </div>
                         </div>
 
-                        <div class="am-u-md-3 ">
-                            <div class="footer_main--column">
-                                <strong class="footer_main--column_title">产品中心</strong>
-                                <ul class="footer_navigation">
-                                    <li class="footer_navigation--item"><a href="#" class="footer_navigation--link">Enterplorer
-                                        企业浏览器</a></li>
-                                    <li class="footer_navigation--item"><a href="#" class="footer_navigation--link">Xcloud
-                                        网站跨屏云</a></li>
-                                    <li class="footer_navigation--item"><a href="#" class="footer_navigation--link">Amaze
-                                        UI 前端开发框架</a></li>
-                                    <li class="footer_navigation--item"><a href="#" class="footer_navigation--link">Amaze
-                                        UI 前端开发框架</a></li>
-                                    <li class="footer_navigation--item"><a href="#" class="footer_navigation--link">Amaze
-                                        UI 前端开发框架</a></li>
-                                </ul>
-                            </div>
-                        </div>
+                        <!--<div class="am-u-md-3 ">-->
+                        <!--<div class="footer_main&#45;&#45;column">-->
+                        <!--<strong class="footer_main&#45;&#45;column_title">产品中心</strong>-->
+                        <!--<ul class="footer_navigation">-->
+                        <!--<li class="footer_navigation&#45;&#45;item"><a href="#" class="footer_navigation&#45;&#45;link">Enterplorer-->
+                        <!--企业浏览器</a></li>-->
+                        <!--<li class="footer_navigation&#45;&#45;item"><a href="#" class="footer_navigation&#45;&#45;link">Xcloud-->
+                        <!--网站跨屏云</a></li>-->
+                        <!--<li class="footer_navigation&#45;&#45;item"><a href="#" class="footer_navigation&#45;&#45;link">Amaze-->
+                        <!--UI 前端开发框架</a></li>-->
+                        <!--<li class="footer_navigation&#45;&#45;item"><a href="#" class="footer_navigation&#45;&#45;link">Amaze-->
+                        <!--UI 前端开发框架</a></li>-->
+                        <!--<li class="footer_navigation&#45;&#45;item"><a href="#" class="footer_navigation&#45;&#45;link">Amaze-->
+                        <!--UI 前端开发框架</a></li>-->
+                        <!--</ul>-->
+                        <!--</div>-->
+                        <!--</div>-->
 
-                        <div class="am-u-md-3 ">
-                            <div class="footer_main--column">
-                                <strong class="footer_main--column_title">技术支持</strong>
-                                <ul class="footer_navigation">
-                                    <li class="footer_navigation--item"><a href="#" class="footer_navigation--link">企业移动信息化白皮书</a>
-                                    </li>
-                                    <li class="footer_navigation--item"><a href="#" class="footer_navigation--link">企业移动信息化白皮书</a>
-                                    </li>
-                                    <li class="footer_navigation--item"><a href="#" class="footer_navigation--link">企业移动信息化白皮书</a>
-                                    </li>
-                                    <li class="footer_navigation--item"><a href="#" class="footer_navigation--link">企业移动信息化白皮书</a>
-                                    </li>
-                                    <li class="footer_navigation--item"><a href="#" class="footer_navigation--link">企业移动信息化白皮书</a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
+                        <!--<div class="am-u-md-3 ">-->
+                        <!--<div class="footer_main&#45;&#45;column">-->
+                        <!--<strong class="footer_main&#45;&#45;column_title">技术支持</strong>-->
+                        <!--<ul class="footer_navigation">-->
+                        <!--<li class="footer_navigation&#45;&#45;item"><a href="#" class="footer_navigation&#45;&#45;link">企业移动信息化白皮书</a>-->
+                        <!--</li>-->
+                        <!--<li class="footer_navigation&#45;&#45;item"><a href="#" class="footer_navigation&#45;&#45;link">企业移动信息化白皮书</a>-->
+                        <!--</li>-->
+                        <!--<li class="footer_navigation&#45;&#45;item"><a href="#" class="footer_navigation&#45;&#45;link">企业移动信息化白皮书</a>-->
+                        <!--</li>-->
+                        <!--<li class="footer_navigation&#45;&#45;item"><a href="#" class="footer_navigation&#45;&#45;link">企业移动信息化白皮书</a>-->
+                        <!--</li>-->
+                        <!--<li class="footer_navigation&#45;&#45;item"><a href="#" class="footer_navigation&#45;&#45;link">企业移动信息化白皮书</a>-->
+                        <!--</li>-->
+                        <!--</ul>-->
+                        <!--</div>-->
+                        <!--</div>-->
 
-                        <div class="am-u-md-3 ">
-                            <div class="footer_main--column">
-                                <strong class="footer_main--column_title">联系详情</strong>
-                                <ul class="footer_contact_info">
-                                    <li class="footer_contact_info--item"><i class="am-icon-phone"></i><span>服务专线：400 069 0309</span>
-                                    </li>
-                                    <li class="footer_contact_info--item"><i class="am-icon-envelope-o"></i><span>yunshipei.com</span>
-                                    </li>
-                                    <li class="footer_contact_info--item"><i class="am-icon-map-marker"></i><span>北京市海淀区海淀大街27号天使大厦（原亿景大厦）三层</span>
-                                    </li>
-                                    <li class="footer_contact_info--item"><i class="am-icon-clock-o"></i><span>Monday - Friday, 9am - 6 pm; </span>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
+                        <!--<div class="am-u-md-3 ">-->
+                        <!--<div class="footer_main&#45;&#45;column">-->
+                        <!--<strong class="footer_main&#45;&#45;column_title">联系详情</strong>-->
+                        <!--<ul class="footer_contact_info">-->
+                        <!--<li class="footer_contact_info&#45;&#45;item"><i class="am-icon-phone"></i><span>服务专线：400 069 0309</span>-->
+                        <!--</li>-->
+                        <!--<li class="footer_contact_info&#45;&#45;item"><i class="am-icon-envelope-o"></i><span>yunshipei.com</span>-->
+                        <!--</li>-->
+                        <!--<li class="footer_contact_info&#45;&#45;item"><i class="am-icon-map-marker"></i><span>北京市海淀区海淀大街27号天使大厦（原亿景大厦）三层</span>-->
+                        <!--</li>-->
+                        <!--<li class="footer_contact_info&#45;&#45;item"><i class="am-icon-clock-o"></i><span>Monday - Friday, 9am - 6 pm; </span>-->
+                        <!--</li>-->
+                        <!--</ul>-->
+                        <!--</div>-->
+                        <!--</div>-->
                     </div>
                 </div>
             </div>
@@ -807,6 +809,13 @@
 <script src="js/jquery-2.1.0.js" charset="utf-8"></script>
 <script src="js/amazeui.js" charset="utf-8"></script>
 <script src="js/common.js" charset="utf-8"></script>
+<script type="text/javascript">
+    var divM = document.getElementsByClassName("index-banner");
+    divM.onclick = function () {
+        alert("成功");
+
+    }
+</script>
 </body>
 
 </html>
