[新增]公用变量类Constant；促销价与原价

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -98,7 +98,7 @@
             <div class="nav-contain">
                 <div class="nav-inner">
                     <ul class="am-nav am-nav-pills am-nav-justify">
-                        <li class=""><a href="/index">首页</a></li>
+                        <li class=""><a href="/">首页</a></li>
                         <li>
                             <a href="#">软件下载</a>
                             <!-- sub-menu start-->
@@ -108,10 +108,10 @@
                             </ul>
                             <!-- sub-menu end-->
                         </li>
-                        <!--<li><a href="html/example.html">LAZADA数据包</a></li>-->
-                        <li><a href="html/solution.html">代打包送货</a></li>
+                        <li><a href="/software">LAZADA收集软件</a></li>
+                        <li><a href="/package">代打包送货</a></li>
                         <li>
-                            <a href="html/news.html">FBA美国空运</a>
+                            <a href="/FBA">FBA美国空运</a>
                             <!-- sub-menu start-->
                             <!--<ul class="sub-menu">-->
                             <!--<li class="menu-item"><a href="html/news-content.html">公司动态</a></li>-->
@@ -119,7 +119,7 @@
                             <!--<li class="menu-item"><a href="html/404-light.html">精彩专题</a></li>-->
                             <!--</ul>-->
                             <!-- sub-menu end-->
-                        </li>4
+                        </li>
                         <!--<li><a href="html/about.html">打印机耗材</a></li>-->
                         <li><a href="#jm">加盟推广</a></li>
                         <li><a href="#lx">联系我们</a></li>
@@ -569,9 +569,13 @@
             <div class="pricing_compare--plans">
                 <div class="pricing_plan">
                     <header class="pricing_plan--header">
-                        <h2 class="pricing_plan--title"><b>基础 </b>版</h2><strong class="pricing_plan--price">￥580
-                        <small></small>
+                        <h2 class="pricing_plan--title"><b>数量限制</b>版</h2><strong class="pricing_plan--price">￥899&nbsp;
+                        <small>
+                            <del>2999</del>
+                        </small>
                     </strong>
+                        <!--<div style="font-size:14px">原价：<del>2999</del></div>-->
+                        <!--<small>原价：<del>2999</del></small>-->
                     </header>
                     <ul class="pricing_plan--options">
                         <li class="pricing_plan--option"><b>1台</b></li>
@@ -584,9 +588,12 @@
                     </footer>
                 </div>
                 <div class="pricing_plan popular">
-                    <header class="pricing_plan--header"><span class="pricing_plan--label popular">热销</span>
-                        <h2 class="pricing_plan--title"><b>旗舰 </b>版</h2><strong class="pricing_plan--price">￥1000
-                            <small></small>
+                    <header class="pricing_plan--header"><span class="pricing_plan--label popular"
+                                                               style="font-size:16px">热销</span>
+                        <h2 class="pricing_plan--title"><b>数量无限 </b>版</h2> <strong class="pricing_plan--price">￥998&nbsp;
+                            <small>
+                                <del>3999</del>
+                            </small>
                         </strong>
                     </header>
                     <ul class="pricing_plan--options">
@@ -602,13 +609,16 @@
                 </div>
                 <div class="pricing_plan">
                     <header class="pricing_plan--header">
-                        <h2 class="pricing_plan--title"><b>进阶 </b>版</h2><strong class="pricing_plan--price">
-                        <small>ip个人定制</small>
+                        <h2 class="pricing_plan--title"><b>ip进阶 </b>版</h2> <strong class="pricing_plan--price">￥4998&nbsp;
+                        <small>
+                            <del>9999</del>
+                        </small>
                     </strong>
                     </header>
                     <ul class="pricing_plan--options">
-                        <li class="pricing_plan--option"><b>￥700/ip </b></li>
-                        <li class="pricing_plan--option"><b>￥1350/2 ip </b></li>
+                        <li class="pricing_plan--option"><b>10台</b></li>
+                        <li class="pricing_plan--option"><b>无限制</b></li>
+                        <li class="pricing_plan--option"><b>无限制</b></li>
                         <!--<li class="pricing_plan&#45;&#45;option"><b>Unlimited </b>time</li>-->
                         <!--<li class="pricing_plan&#45;&#45;option"><b>Unlimited </b>time</li>-->
                         <!--<li class="pricing_plan&#45;&#45;option"><b>Unlimited </b>sum</li>-->
