--- a/src/main/resources/templates/package.html
+++ b/src/main/resources/templates/package.html
@@ -1,52 +1,292 @@
-<p>
-    <span style="font-size: 20px;"><strong><span style="font-family: 宋体;">深圳神猫速运代打包优势：</span></strong></span><span
-        style="font-size:16px;font-family:宋体"> </span>
-</p>
-<p style="margin-left:0;text-indent:0">
-    <span style="font-size:16px;font-family:宋体">1. </span><span style="font-size:16px;font-family:宋体">卖家可直接从 1688 上买货寄到我们神猫仓库，可以省了一半的快递费和时间； </span>
-</p>
-<p>
-    <span style="font-size:16px;font-family:宋体">2. </span><span style="font-size:16px;font-family: 宋体">货物寄到我们神猫仓库后，将会有一对一的工作人员进行订单跟进，将收到的货进行验货、打包、贴单、送货到 LGS 深圳仓库，一条龙服务； </span>
-</p>
-<p>
-    <span style="font-size:16px;font-family:宋体">3. </span><span style="font-size:16px;font-family: 宋体">当天12 点前签收的货，都可在当天 5 点钟送往 LGS 深圳仓库扫描，当晚 就可以完成扫描入库； </span>
-</p>
-<p>
-    <span style="font-size:16px;font-family:宋体">4. </span><span style="font-size:16px;font-family: 宋体">如有接近 7 天发货期的货，可以加急处理，费用看情况收取，一般情况下免费； </span>
-</p>
-<p>
-    <span style="font-size:16px;font-family:宋体">5. </span><span style="font-size:16px;font-family: 宋体">免费存货服务，30 天清点一次，具体存货细节，与我们沟通。</span>
-</p>
-<p>
-    <span style="font-size:16px;font-family:宋体">&nbsp;</span>
-</p>
-<p>
-    <span style="font-size:16px;font-family:宋体">客户需要提供的信息： </span>
-</p>
-<p style="margin-left:0;text-indent:0">
-    <span style="font-size: 16px;font-family:宋体">1. </span><span style="font-size:16px;font-family:宋体">客户寄货到神猫仓库后，需要通知相关业务员，并把寄过来的产品信息通过表格的方式发给业务员。（表格的信息需要体现：产品名称、图片、sku、 物流单号、LGS 运单号） </span>
-</p>
-<p style="margin-left:0;text-indent:0">
-    <span style="font-size: 16px;font-family:宋体">2. </span><span style="font-size:16px;font-family:宋体">客户需要把每天发过来的货的 LGS 运单，在后台另存为 PDF 档，发给业务员；</span>
-</p>
-<p>
-    <span style="font-size:16px;font-family:宋体">&nbsp;</span>
-</p>
-<p>
-    <span style="font-size:16px;font-family:宋体">唯一收取费用项：</span>
-</p>
-<p>
-    <span style="font-size:16px;font-family:宋体">打包材料费、贴标费、送货费全免，我们仅收打包处理费，具体费用如下： 每个订单（1 个 LGS 号算一个单）首重 1KG，3 块，续重 0.5 块。(尺寸为 20*30*7，具体尺寸收费具体沟通)</span>
-</p>
-<p>
-    <span style="font-size:16px;font-family:宋体">&nbsp;</span>
-</p>
-<p>
-    <span style="font-size:16px;font-family:宋体">收货地址与联系人： </span>
-</p>
-<p>
-    <span style="font-size:16px;font-family:宋体">李生（+您的名字） 广东省深圳市宝安区福永新和二区二巷 9 号 17765293435</span>
-</p>
-<p>
-    <br/>
-</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>企业网站模板</title>
+    <link rel="stylesheet" href="css/amazeui.css"/>
+    <link rel="stylesheet" href="css/common.min.css"/>
+    <link rel="stylesheet" href="css/about.min.css"/>
+    <link rel="stylesheet" href="css/index.min.css"/>
+</head>
+<body>
+<div class="layout">
+    <div class="layout-header am-hide-sm-only">
+        <!--topbar start-->
+        <div class="topbar">
+            <div class="container">
+                <div class="am-g">
+                </div>
+            </div>
+        </div>
+        <!--topbar end-->
+
+
+        <div class="header-box" data-am-sticky>
+            <!--header start-->
+            <div class="container">
+                <div class="header">
+                    <div class="am-g">
+                        <div class="am-u-lg-2 am-u-sm-12">
+                            <div class="logo">
+                                <a href=""><img src="images/catch.png" alt=""/></a>
+                            </div>
+                        </div>
+                        <div class="am-u-md-10">
+                            <div class="header-right am-fr">
+                                <div class="header-contact">
+                                    <div class="header_contacts--item">
+                                        <div class="contact_mini">
+                                            <i style="color:#0066FF" class="contact-icon am-icon-qq"></i>
+                                            <strong>318074670</strong>
+                                            <span>客服24小时在线</span>
+                                        </div>
+                                    </div>
+                                    <div class="header_contacts--item">
+                                        <div class="contact_mini">
+                                            <i style="color:#339933" class="contact-icon am-icon-weixin"></i>
+                                            <strong>ds318074670</strong>
+                                            <span>欢迎随时联系！</span>
+                                        </div>
+                                    </div>
+                                    <div class="header_contacts--item">
+                                        <div class="contact_mini">
+                                            <i style="color:#7c6aa6" class="contact-icon am-icon-map-marker"></i>
+                                            <strong>广东-深圳-宝安</strong>
+                                            <span>离LAZADA深圳仓库不足3公里</span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!--header end-->
+
+
+            <!--nav start-->
+            <div class="nav-contain">
+                <div class="nav-inner">
+                    <ul class="am-nav am-nav-pills am-nav-justify">
+                        <li class=""><a href="/">首页</a></li>
+                        <li>
+                            <a href="#">软件下载</a>
+                            <!-- sub-menu start-->
+                            <ul class="sub-menu">
+                                <li class="menu-item"><a href="/downloadsoftware?type=1">试用版</a></li>
+                                <li class="menu-item"><a href="/downloadsoftware?type=2">正式版</a></li>
+                            </ul>
+                            <!-- sub-menu end-->
+                        </li>
+                        <li><a href="/software">LAZADA收集软件</a></li>
+                        <li><a href="/package">代打包送货</a></li>
+                        <li>
+                            <a href="/FBA">FBA美国空运</a>
+                            <!-- sub-menu start-->
+                            <!--<ul class="sub-menu">-->
+                            <!--<li class="menu-item"><a href="html/news-content.html">公司动态</a></li>-->
+                            <!--<li class="menu-item"><a href="html/404-dark.html">行业动态</a></li>-->
+                            <!--<li class="menu-item"><a href="html/404-light.html">精彩专题</a></li>-->
+                            <!--</ul>-->
+                            <!-- sub-menu end-->
+                        </li>
+                        <li><a href="#jm">加盟推广</a></li>
+                        <li><a href="#lx">联系我们</a></li>
+                    </ul>
+                </div>
+            </div>
+            <!--nav end-->
+        </div>
+    </div>
+
+
+    <!--===========layout-container================-->
+    <div class="layout-container">
+        <div class="page-header">
+            <div class="am-container">
+                <h1 class="page-header-title">代打包</h1>
+            </div>
+        </div>
+
+        <div class="breadcrumb-box">
+            <div class="am-container">
+                <ol class="am-breadcrumb">
+                    <li><a href="/">首页</a></li>
+                    <li class="am-active">代打包</li>
+                </ol>
+            </div>
+        </div>
+    </div>
+    <div class="section">
+        <div class="container">
+            <div class="section--header">
+                <!--<h2 class="section&#45;&#45;title">云适配</h2>-->
+                <!--<p class="section&#45;&#45;description">-->
+                <!--全球领先HTML5企业移动化解决方案供应商，由前微软美国总部IE浏览器核心研发团队成员及移动互联网行业专家在美国西雅图创立-->
+                <!--<br>获得了微软创投的扶持以及晨兴资本、IDG资本、天创资本等国际顶级风投机构的投资。-->
+                <!--</p>-->
+            </div>
+
+            <!--about-container start-->
+            <div class="about-container">
+                <div class="am-g">
+                    <p>
+                        <span style="font-size: 20px;"><strong><span
+                                style="font-family: 宋体;">深圳神猫速运代打包优势：</span></strong></span><span
+                            style="font-size:16px;font-family:宋体"> </span>
+                    </p>
+                    <p style="margin-left:0;text-indent:0">
+                        <span style="font-size:16px;font-family:宋体">1. </span><span
+                            style="font-size:16px;font-family:宋体">卖家可直接从 1688 上买货寄到我们神猫仓库，可以省了一半的快递费和时间； </span>
+                    </p>
+                    <p>
+                        <span style="font-size:16px;font-family:宋体">2. </span><span
+                            style="font-size:16px;font-family: 宋体">货物寄到我们神猫仓库后，将会有一对一的工作人员进行订单跟进，将收到的货进行验货、打包、贴单、送货到 LGS 深圳仓库，一条龙服务； </span>
+                    </p>
+                    <p>
+                        <span style="font-size:16px;font-family:宋体">3. </span><span
+                            style="font-size:16px;font-family: 宋体">当天12 点前签收的货，都可在当天 5 点钟送往 LGS 深圳仓库扫描，当晚 就可以完成扫描入库； </span>
+                    </p>
+                    <p>
+                        <span style="font-size:16px;font-family:宋体">4. </span><span
+                            style="font-size:16px;font-family: 宋体">如有接近 7 天发货期的货，可以加急处理，费用看情况收取，一般情况下免费； </span>
+                    </p>
+                    <p>
+                        <span style="font-size:16px;font-family:宋体">5. </span><span
+                            style="font-size:16px;font-family: 宋体">免费存货服务，30 天清点一次，具体存货细节，与我们沟通。</span>
+                    </p>
+                    <p>
+                        <span style="font-size:16px;font-family:宋体">&nbsp;</span>
+                    </p>
+                    <p>
+                        <span style="font-size:16px;font-family:宋体">客户需要提供的信息： </span>
+                    </p>
+                    <p style="margin-left:0;text-indent:0">
+                        <span style="font-size: 16px;font-family:宋体">1. </span><span
+                            style="font-size:16px;font-family:宋体">客户寄货到神猫仓库后，需要通知相关业务员，并把寄过来的产品信息通过表格的方式发给业务员。（表格的信息需要体现：产品名称、图片、sku、 物流单号、LGS 运单号） </span>
+                    </p>
+                    <p style="margin-left:0;text-indent:0">
+                        <span style="font-size: 16px;font-family:宋体">2. </span><span
+                            style="font-size:16px;font-family:宋体">客户需要把每天发过来的货的 LGS 运单，在后台另存为 PDF 档，发给业务员；</span>
+                    </p>
+                    <p>
+                        <span style="font-size:16px;font-family:宋体">&nbsp;</span>
+                    </p>
+                    <p>
+                        <span style="font-size:16px;font-family:宋体">唯一收取费用项：</span>
+                    </p>
+                    <p>
+                        <span style="font-size:16px;font-family:宋体">打包材料费、贴标费、送货费全免，我们仅收打包处理费，具体费用如下： 每个订单（1 个 LGS 号算一个单）首重 1KG，3 块，续重 0.5 块。(尺寸为 20*30*7，具体尺寸收费具体沟通)</span>
+                    </p>
+                    <p>
+                        <span style="font-size:16px;font-family:宋体">&nbsp;</span>
+                    </p>
+                    <p>
+                        <span style="font-size:16px;font-family:宋体">收货地址与联系人： </span>
+                    </p>
+                    <p>
+                        <span style="font-size:16px;font-family:宋体">李生（+您的名字） 广东省深圳市宝安区福永新和二区二巷 9 号 17765293435</span>
+                    </p>
+                    <p>
+                        <br/>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div id="jm" class="section promo_banner-container">
+        <!--index-container start-->
+        <div class="promo_banner-box">
+            <div class="container">
+                <h2 class="promo_banner--title">加盟推广</h2>
+                <p class="promo_banner--text">
+                    我们的工具深受电商界朋友的支持，欢迎加盟，一起将这个工具推广开来，只要成功加盟，
+                    <br>每成功推广一位使用我们的工具，就能获得更加丰厚的回报。
+                    <!--<footer class="promo_banner&#45;&#45;footer">-->
+                    <!--<button type="button" class="am-btn am-btn-secondary">MORE>></button>-->
+                    <!--</footer>-->
+            </div>
+        </div>
+        <!--index-container end-->
+    </div>
+    <div id="lx" class="section" style="margin-top:0px;background-image: url('images/pattern-light.png');">
+        <div class="container">
+            <!--index-container start-->
+            <div class="index-container">
+                <div class="am-g">
+                    <div class="am-u-md-4">
+                        <div class="contact_card">
+                            <i style="color:#0066FF" class="contact_card--icon am-primary am-icon-qq"></i>
+                            <strong class="contact_card--title">QQ联系</strong>
+                            <p class="contact_card--text"><br> <strong>318074670</strong> <br></p>
+                            <!--<button type="button" class="am-btn am-btn-secondary">Order a Call Back</button>-->
+                        </div>
+                    </div>
+                    <div class="am-u-md-4">
+                        <div class="contact_card">
+                            <i style="color:#339933" class="contact_card--icon am-success am-icon-weixin"></i>
+                            <strong class="contact_card--title">微信联系</strong>
+                            <p class="contact_card--text"><br> <strong>ds318074670</strong> <br></p>
+                            <!--<button type="button" class="am-btn am-btn-secondary">Start Writing</button>-->
+                        </div>
+                    </div>
+                    <div class="am-u-md-4">
+                        <div class="contact_card">
+                            <i style="color:#59bcdb" class="contact_card--icon am-icon-map-marker"></i>
+                            <strong class="contact_card--title">送货地址</strong>
+                            <p class="contact_card--text"><br> <strong>广东·深圳·宝安福永新和二区7巷9号</strong> <br></p>
+                            <!--<button type="button" class="am-btn am-btn-secondary">See the Map</button>-->
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!--index-container end-->
+        </div>
+    </div>
+
+
+    <!--===========layout-footer================-->
+    <div class="layout-footer">
+        <div class="footer">
+            <div style="background-color:#383d61" class="footer--bg"></div>
+            <div class="footer--inner">
+                <div class="container">
+                    <div class="footer_main">
+                        <div class="am-g">
+                            <div class="am-u-md-3 ">
+                                <div class="footer_main--column">
+                                    <strong class="footer_main--column_title"></strong>
+                                    <div class="footer_about">
+                                        <p class="footer_about--text">
+
+                                            <br>
+                                            <br>
+                                            <br>
+                                        </p>
+                                        <p class="footer_about--text">
+                                            <br>
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<script src="js/jquery-2.1.0.js" charset="utf-8"></script>
+<script src="js/amazeui.js" charset="utf-8"></script>
+</body>
+
+</html>
+
+
+
+
+
