--- a/src/main/resources/templates/software.html
+++ b/src/main/resources/templates/software.html
@@ -1,17 +1,246 @@
-<h1 style="font-size: 32px; font-weight: bold;text-align: left; margin: 0px 0px 10px;">
-    <span style="font-size: 20px;">批量采集助手</span>
-</h1>
-<p>
-    &nbsp; &nbsp; 1.批量采集助手是帮助电商卖家针对LAZADA、速卖通、亚马逊、虾皮、及其他外贸平台打造的线下产品采集软件。
-    让你的快速地采集您要的产品数据，将数据进行一步分析，整理，筛选出有竞争力产品、有潜力产品，并通过平台的一键批量上传功能，实现产品快速上传、快速抢占市场，固定自己的产品类目地位。现阶段，我们先开通新兴市场，LAZADA平台，该平台还是初步发展，并且非常有重要潜力的东南亚最大的电商平台，以铺货为主，要求各卖家大量铺SKU，丰富产品。
-</p>
-<p>
-    &nbsp; &nbsp; 2.使用我们的软件，通过我们的软件，采集下来的数据，详情页面正常显示图片，一键上传，快速。并且，如果使用我们的高级套餐，有专业的人员辅助运营，我们将带你入行。
-</p>
-<p>
-    &nbsp; &nbsp; 3.定制化服务，用户可以根据自己的需独立平台对接，其他平台对接，库存管理，财务报表，采购管理,利润统计管理，员工绩效考核等。有需求定制请直接联系我们的 <span
-        style="color: rgb(0, 176, 80);">QQ:318074670</span>
-</p>
-<p>
-    <br/>
-</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>企业网站模板</title>
+    <link rel="stylesheet" href="css/amazeui.css"/>
+    <link rel="stylesheet" href="css/common.min.css"/>
+    <link rel="stylesheet" href="css/about.min.css"/>
+    <link rel="stylesheet" href="css/index.min.css"/>
+</head>
+<body>
+<div class="layout">
+    <div class="layout-header am-hide-sm-only">
+        <!--topbar start-->
+        <div class="topbar">
+            <div class="container">
+                <div class="am-g">
+                </div>
+            </div>
+        </div>
+        <!--topbar end-->
+
+
+        <div class="header-box" data-am-sticky>
+            <!--header start-->
+            <div class="container">
+                <div class="header">
+                    <div class="am-g">
+                        <div class="am-u-lg-2 am-u-sm-12">
+                            <div class="logo">
+                                <a href=""><img src="images/catch.png" alt=""/></a>
+                            </div>
+                        </div>
+                        <div class="am-u-md-10">
+                            <div class="header-right am-fr">
+                                <div class="header-contact">
+                                    <div class="header_contacts--item">
+                                        <div class="contact_mini">
+                                            <i style="color:#0066FF" class="contact-icon am-icon-qq"></i>
+                                            <strong>318074670</strong>
+                                            <span>客服24小时在线</span>
+                                        </div>
+                                    </div>
+                                    <div class="header_contacts--item">
+                                        <div class="contact_mini">
+                                            <i style="color:#339933" class="contact-icon am-icon-weixin"></i>
+                                            <strong>ds318074670</strong>
+                                            <span>欢迎随时联系！</span>
+                                        </div>
+                                    </div>
+                                    <div class="header_contacts--item">
+                                        <div class="contact_mini">
+                                            <i style="color:#7c6aa6" class="contact-icon am-icon-map-marker"></i>
+                                            <strong>广东-深圳-宝安</strong>
+                                            <span>离LAZADA深圳仓库不足3公里</span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!--header end-->
+
+
+            <!--nav start-->
+            <div class="nav-contain">
+                <div class="nav-inner">
+                    <ul class="am-nav am-nav-pills am-nav-justify">
+                        <li class=""><a href="/">首页</a></li>
+                        <li>
+                            <a href="#">软件下载</a>
+                            <!-- sub-menu start-->
+                            <ul class="sub-menu">
+                                <li class="menu-item"><a href="/downloadsoftware?type=1">试用版</a></li>
+                                <li class="menu-item"><a href="/downloadsoftware?type=2">正式版</a></li>
+                            </ul>
+                            <!-- sub-menu end-->
+                        </li>
+                        <li><a href="/software">LAZADA收集软件</a></li>
+                        <li><a href="/package">代打包送货</a></li>
+                        <li>
+                            <a href="/FBA">FBA美国空运</a>
+                            <!-- sub-menu start-->
+                            <!--<ul class="sub-menu">-->
+                            <!--<li class="menu-item"><a href="html/news-content.html">公司动态</a></li>-->
+                            <!--<li class="menu-item"><a href="html/404-dark.html">行业动态</a></li>-->
+                            <!--<li class="menu-item"><a href="html/404-light.html">精彩专题</a></li>-->
+                            <!--</ul>-->
+                            <!-- sub-menu end-->
+                        </li>
+                        <li><a href="#jm">加盟推广</a></li>
+                        <li><a href="#lx">联系我们</a></li>
+                    </ul>
+                </div>
+            </div>
+            <!--nav end-->
+        </div>
+    </div>
+
+
+    <!--===========layout-container================-->
+    <div class="layout-container">
+        <div class="page-header">
+            <div class="am-container">
+                <h1 class="page-header-title">采集助手</h1>
+            </div>
+        </div>
+
+        <div class="breadcrumb-box">
+            <div class="am-container">
+                <ol class="am-breadcrumb">
+                    <li><a href="/">首页</a></li>
+                    <li class="am-active">采集助手</li>
+                </ol>
+            </div>
+        </div>
+    </div>
+    <div class="section">
+        <div class="container">
+            <div class="section--header">
+                <!--<h2 class="section&#45;&#45;title">云适配</h2>-->
+                <!--<p class="section&#45;&#45;description">-->
+                <!--全球领先HTML5企业移动化解决方案供应商，由前微软美国总部IE浏览器核心研发团队成员及移动互联网行业专家在美国西雅图创立-->
+                <!--<br>获得了微软创投的扶持以及晨兴资本、IDG资本、天创资本等国际顶级风投机构的投资。-->
+                <!--</p>-->
+            </div>
+
+            <!--about-container start-->
+            <div class="about-container">
+                <div class="am-g">
+                    <h1 style="font-size: 32px; font-weight: bold;text-align: left; margin: 0px 0px 10px;">
+                        <span style="font-size: 20px;">批量采集助手</span>
+                    </h1>
+                    <p>
+                        &nbsp; &nbsp; 1.批量采集助手是帮助电商卖家针对LAZADA、速卖通、亚马逊、虾皮、及其他外贸平台打造的线下产品采集软件。
+                        让你的快速地采集您要的产品数据，将数据进行一步分析，整理，筛选出有竞争力产品、有潜力产品，并通过平台的一键批量上传功能，实现产品快速上传、快速抢占市场，固定自己的产品类目地位。现阶段，我们先开通新兴市场，LAZADA平台，该平台还是初步发展，并且非常有重要潜力的东南亚最大的电商平台，以铺货为主，要求各卖家大量铺SKU，丰富产品。
+                    </p>
+                    <p>
+                        &nbsp; &nbsp; 2.使用我们的软件，通过我们的软件，采集下来的数据，详情页面正常显示图片，一键上传，快速。并且，如果使用我们的高级套餐，有专业的人员辅助运营，我们将带你入行。
+                    </p>
+                    <p>
+                        &nbsp; &nbsp; 3.定制化服务，用户可以根据自己的需独立平台对接，其他平台对接，库存管理，财务报表，采购管理,利润统计管理，员工绩效考核等。有需求定制请直接联系我们的 <span
+                            style="color: rgb(0, 176, 80);">QQ:318074670</span>
+                    </p>
+                    <p>
+                        <br/>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div id="jm" class="section promo_banner-container">
+        <!--index-container start-->
+        <div class="promo_banner-box">
+            <div class="container">
+                <h2 class="promo_banner--title">加盟推广</h2>
+                <p class="promo_banner--text">
+                    我们的工具深受电商界朋友的支持，欢迎加盟，一起将这个工具推广开来，只要成功加盟，
+                    <br>每成功推广一位使用我们的工具，就能获得更加丰厚的回报。
+                    <!--<footer class="promo_banner&#45;&#45;footer">-->
+                    <!--<button type="button" class="am-btn am-btn-secondary">MORE>></button>-->
+                    <!--</footer>-->
+            </div>
+        </div>
+        <!--index-container end-->
+    </div>
+    <div id="lx" class="section" style="margin-top:0px;background-image: url('images/pattern-light.png');">
+        <div class="container">
+            <!--index-container start-->
+            <div class="index-container">
+                <div class="am-g">
+                    <div class="am-u-md-4">
+                        <div class="contact_card">
+                            <i style="color:#0066FF" class="contact_card--icon am-primary am-icon-qq"></i>
+                            <strong class="contact_card--title">QQ联系</strong>
+                            <p class="contact_card--text"><br> <strong>318074670</strong> <br></p>
+                            <!--<button type="button" class="am-btn am-btn-secondary">Order a Call Back</button>-->
+                        </div>
+                    </div>
+                    <div class="am-u-md-4">
+                        <div class="contact_card">
+                            <i style="color:#339933" class="contact_card--icon am-success am-icon-weixin"></i>
+                            <strong class="contact_card--title">微信联系</strong>
+                            <p class="contact_card--text"><br> <strong>ds318074670</strong> <br></p>
+                            <!--<button type="button" class="am-btn am-btn-secondary">Start Writing</button>-->
+                        </div>
+                    </div>
+                    <div class="am-u-md-4">
+                        <div class="contact_card">
+                            <i style="color:#59bcdb" class="contact_card--icon am-icon-map-marker"></i>
+                            <strong class="contact_card--title">送货地址</strong>
+                            <p class="contact_card--text"><br> <strong>广东·深圳·宝安福永新和二区7巷9号</strong> <br></p>
+                            <!--<button type="button" class="am-btn am-btn-secondary">See the Map</button>-->
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!--index-container end-->
+        </div>
+    </div>
+
+
+    <!--===========layout-footer================-->
+    <div class="layout-footer">
+        <div class="footer">
+            <div style="background-color:#383d61" class="footer--bg"></div>
+            <div class="footer--inner">
+                <div class="container">
+                    <div class="footer_main">
+                        <div class="am-g">
+                            <div class="am-u-md-3 ">
+                                <div class="footer_main--column">
+                                    <strong class="footer_main--column_title"></strong>
+                                    <div class="footer_about">
+                                        <p class="footer_about--text">
+
+                                            <br>
+                                            <br>
+                                            <br>
+                                        </p>
+                                        <p class="footer_about--text">
+                                            <br>
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<script src="js/jquery-2.1.0.js" charset="utf-8"></script>
+<script src="js/amazeui.js" charset="utf-8"></script>
+</body>
+
+</html>
+
+
