[修复]FBI-》FBA；购买无忧底下文字

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -338,7 +338,7 @@
                                 <i class="am-icon-line-chart"></i>
                             </div>
                             <div class="school-item-right am-u-md-9 am-u-sm-9 am-text-left">
-                                <strong class="promo_slider_nav--item_title">FBI美国DHL报价表</strong>
+                                <strong class="promo_slider_nav--item_title">FBA美国DHL报价表</strong>
                                 <p class="promo_slider_nav--item_description">不限重量，免费上门取件</p>
                             </div>
                         </a>
@@ -497,7 +497,7 @@
                         <i class="service_item--icon am-icon-diamond"></i>
                         <h3 class="service_item--title">购买无忧</h3>
                         <div class="service_item--text">
-                            <p>标签栏可切换，不必为了新内容而被迫跳转界面，多项工作内容并行处理</p>
+                            <p>我们24小时在线服务，随时在线解决问题</p>
                         </div>
                         <!--<footer class="service_item&#45;&#45;footer"><a href="#" class="link -blue_light">Learn More>></a></footer>-->
                     </div>
