--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -100,12 +100,12 @@
                     <ul class="am-nav am-nav-pills am-nav-justify">
                         <li class=""><a href="/">首页</a></li>
                         <li>
-                            <a href="#">软件下载</a>
+                            <a href="/downloadsoftware">软件下载</a>
                             <!-- sub-menu start-->
-                            <ul class="sub-menu">
-                                <li class="menu-item"><a href="/downloadsoftware?type=1">试用版</a></li>
-                                <li class="menu-item"><a href="/downloadsoftware?type=2">正式版</a></li>
-                            </ul>
+                            <!--<ul class="sub-menu">-->
+                            <!--<li class="menu-item"><a href="/downloadsoftware?type=1">试用版</a></li>-->
+                            <!--<li class="menu-item"><a href="/downloadsoftware?type=2">正式版</a></li>-->
+                            <!--</ul>-->
                             <!-- sub-menu end-->
                         </li>
                         <li><a href="/software">LAZADA收集软件</a></li>
